--- a/app/templates/url_tracker/create.html
+++ b/app/templates/url_tracker/create.html
@@ -1,3 +1,20 @@
 {% extends "_base.html" %}
+
 {% block content %}
+
+{% for field, errors in form.errors.items() %}
+  <div class="alert alert-error">
+    {{ form[field].label }}: {{ ', '.join(errors) }}
+  </div>
+{% endfor %}
+
+<form method="POST">
+  {{ form.csrf_token }}
+
+  {% if form.csrf_token.errors %}
+    <div class="warning">Not a valid form</div>
+  {% endif %}
+  <div>{{ form.destination.label }} {{ form.destination }}</div>
+  <div><input type="submit" value="Submit"></div>
+</form>
 {% endblock %}
