WIP on the view page
WIP on the view page

--- a/app/static/css/base.less
+++ b/app/static/css/base.less
@@ -20,14 +20,18 @@ body {
   -webkit-box-align: center;
   align-items: center;
   height: 100%;
+}
 
-  >.container {
-    padding: 30px;
-    width: 375px;
-    border-left: 5px solid @bootstrap_blue;
+#create-container {
+  padding: 30px;
+  width: 375px;
+  border-left: 5px solid @bootstrap_blue;
 
-    > form {
+  > form {
       margin: 0 auto;
-    }
   }
+}
+
+#view-container {
+  background-color: limegreen;
 }
