--- a/app/templates/url_tracker/create.html
+++ b/app/templates/url_tracker/create.html
@@ -1,12 +1,10 @@
 {% extends "_base.html" %}
 
-{% set page_title = 'Url tracker' %}
+{% set page_title = 'Url tracker | welcome' %}
 
 {% block content %}
 
-<div class="flexbox-container">
-
-  <div class="container">
+  <div class="container" id="create-container">
 
     <form method="POST" autocomplete="off">
 
@@ -30,7 +28,5 @@
     </form>
 
   </div>
-
-</div>
 
 {% endblock %}
