--- a/app/templates/url_tracker/view.html
+++ b/app/templates/url_tracker/view.html
@@ -5,6 +5,22 @@
 {% block content %}
 
 <div class="container" id="view-container">
+
+  <h3>
+    Manage link
+    <small class="text-muted">{{ 'http://127.0.0.1:8080/u/' + target.manage_key }}</small>
+  </h3>
+
+  <h3>
+    Share link
+    <small class="text-muted">{{ 'http://127.0.0.1:8080/g/' + target.tracking_key }}</small>
+  </h3>
+
+  <h3>
+    Destination
+    <small class="text-muted">{{ target.destination }}</small>
+  </h3>
+
 </div>
 
 {% endblock %}
