--- a/app/static/css/base.less
+++ b/app/static/css/base.less
@@ -9,6 +9,14 @@ html {
   border-left: 5px solid @bootstrap_blue;
 }
 
+.divide {
+  width: 75%;
+  height: 2px;
+  background-color: @bootstrap_blue;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
 body {
   display: block;
   margin: 0px;
@@ -39,4 +47,8 @@ body {
 #view-container {
   padding: 30px;
   .left-bordered;
+}
+
+.link-title {
+  font-size: 15px;
 }
