--- a/app/static/css/base.less
+++ b/app/static/css/base.less
@@ -44,8 +44,17 @@ body {
   }
 }
 
+#click_chart {
+  margin-top: 50px;
+  width: 100%;
+  height: 100%;
+}
+
 #view-container {
   padding: 30px;
+  width: 75%;
+  min-width: 555px;
+
   .left-bordered;
 }
 
