--- a/app/templates/url_tracker/view.html
+++ b/app/templates/url_tracker/view.html
@@ -6,19 +6,34 @@
 
 <div class="container" id="view-container">
 
-  <h2>
-    Manage link
-    <small class="text-muted link-title">{{ HOSTNAME + '/u/' + target.manage_key }}</small>
-  </h2>
+  <h2>Shortened URL | <small class="text-muted">{{ target.manage_key }}</small></h2>
+  <br>
 
-  <h2>
-    Share link
-    <small class="text-muted link-title">{{ HOSTNAME + '/g/' + target.tracking_key }}</small>
-  </h2>
+  <table class="table table-sm">
+    <tbody>
+      <tr>
+        <td>View click data with this one</td>
+        <td><b>{{ HOSTNAME + '/u/' + target.manage_key }}</b></td>
+      </tr>
+      <tr>
+        <td>Share this one with users</td>
+        <td><b>{{ HOSTNAME + '/g/' + target.tracking_key }}</b></td>
+      </tr>
+      <tr>
+        <td>This is where the link goes</td>
+        <td>{{ target.destination }}</td>
+      </tr>
+    </tbody>
+  </table>
+  <br>
 
-  <small class="text-muted link-title">{{ target.destination }}</small>
-
+  <h3>Click History</h3>
   <canvas id="click_chart" key="{{ '/api/target_clicks/' + target.manage_key }}"></canvas>
+  <br>
+
+  <a class="btn btn-primary" href="{{ '/u/' + target.manage_key + '/click_data.csv' }}" role="button">
+    download data
+  </a>
 
 </div>
 
