--- a/app/static/css/base.less
+++ b/app/static/css/base.less
@@ -3,6 +3,38 @@
 
 html {
   height: 100%;
+  overflow-y: scroll;
+}
+
+#title-head {
+  width: 75%;
+  max-width: 900px;
+  min-width: 555px;
+  margin: 0 auto;
+  margin-bottom: 25px;
+  padding: 10px;
+}
+
+#title-footer {
+  width: 75%;
+  max-width: 900px;
+  margin: 0 auto;
+  margin-top: 25px;
+  padding: 10px;
+  text-align: center;
+
+  > span {
+
+    > a {
+      color: black;
+    }
+
+  }
+}
+
+.make_it_blue {
+  color: @bootstrap_blue;
+  font-weight: bold;
 }
 
 .left-bordered {
@@ -24,23 +56,34 @@ body {
 }
 
 .flexbox-container {
-  display: -ms-flexbox;
-  display: -webkit-flex;
   display: flex;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  -webkit-box-align: center;
+  flex-direction: column;
   align-items: center;
   height: 100%;
 }
 
 #create-container {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+#create-form-wrapper {
+  .left-bordered;
   padding: 30px;
   width: 375px;
-  .left-bordered;
-
   > form {
       margin: 0 auto;
+  }
+}
+
+#view-wrapper {
+  .left-bordered;
+  padding: 30px;
+  width: 90%;
+  > table {
+    max-width: 595px;
   }
 }
 
@@ -51,9 +94,10 @@ body {
 }
 
 #view-container {
-  padding: 30px;
-  width: 75%;
-  min-width: 555px;
-
-  .left-bordered;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 100%;
 }
