Sorting out view mess
Sorting out view mess.  Have it looking correctly now.  Will work on
items under issues next.

--- a/app/templates/url_tracker/create.html
+++ b/app/templates/url_tracker/create.html
@@ -4,33 +4,51 @@
 
 {% block content %}
 
-<div class="container" id="create-container">
+<div class="flexbox-container">
 
-  <div id="create-form-wrapper">
+  <div id="title-head">
+    <h1><a href="/">utldr.co</a> <span class="make_it_blue">|</span>
+      <small class="text-muted">tldr 4 urls</small>
+    </h1>
+  </div>
 
-    <form method="POST" autocomplete="off">
+  <div class="container" id="create-container">
 
-      {% if form.errors %}
-      <div class="form-group has-warning">
-      {% else %}
-      <div class="form-group">
-      {% endif %}
+    <div id="create-form-wrapper">
+
+      <form method="POST" autocomplete="off">
 
         {% if form.errors %}
-        <div class="form-control-feedback">{{ form.errors['destination'][0] }}</div>
-        <input type="text" class="form-control form-control-warning form-control-sm" id="destination" name="destination" placeholder="http(s)://...">
+        <div class="form-group has-warning">
         {% else %}
-        <input type="text" class="form-control form-control-sm" id="destination" name="destination" placeholder="http(s)://...">
+        <div class="form-group">
         {% endif %}
 
-        {{ form.csrf_token }}
+          {% if form.errors %}
+          <div class="form-control-feedback">{{ form.errors['destination'][0] }}</div>
+          <input type="text" class="form-control form-control-warning form-control-sm" id="destination" name="destination" placeholder="http(s)://...">
+          {% else %}
+          <input type="text" class="form-control form-control-sm" id="destination" name="destination" placeholder="http(s)://...">
+          {% endif %}
 
-      </div>
-      <button type="submit" class="btn btn-primary btn-sm">Shorten</button>
-    </form>
+            {{ form.csrf_token }}
 
+        </div>
+        <button type="submit" class="btn btn-primary btn-sm">Shorten</button>
+      </form>
+
+    </div>
+
+  </div>
+
+  <div id="title-footer">
+    <span>
+      <a href="/">utldr.co</a> <span class="make_it_blue">|</span>
+      <a href="https://github.com/nomadmtb/utldr" target="_blank">Github</a> <span class="make_it_blue">|</span>
+      <a href="https://www.twitter.com/nomadmtb" target="_blank">Twitter</a>
+    </span>
   </div>
 
 </div>
 
-{% endblock %}
+  {% endblock %}
