--- a/app/static/css/base.less
+++ b/app/static/css/base.less
@@ -1,5 +1,6 @@
 // out: base.css, compress: true
 @bootstrap_blue: #428bca;
+@black: #373a3c;
 
 html {
   height: 100%;
@@ -11,8 +12,15 @@ html {
   max-width: 900px;
   min-width: 555px;
   margin: 0 auto;
-  margin-bottom: 25px;
+  margin-bottom: 35px;
   padding: 10px;
+
+  > h1 {
+    > a {
+      color: @black;
+      text-decoration: none;
+    }
+  }
 }
 
 #title-footer {
@@ -26,7 +34,25 @@ html {
   > span {
 
     > a {
-      color: black;
+      color: @black;
+    }
+
+  }
+}
+
+#view-footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 10px;
+  background-color: white;
+  text-align: center;
+
+  > span {
+
+    > a {
+      color: @black;
     }
 
   }
@@ -78,26 +104,17 @@ body {
   }
 }
 
-#view-wrapper {
+#view-container {
   .left-bordered;
+  width: 75%;
+  margin: 0 auto;
+  max-width: 900px;
+  min-width: 565px;
   padding: 30px;
-  width: 90%;
-  > table {
-    max-width: 595px;
-  }
 }
 
 #click_chart {
   margin-top: 20px;
   width: 100%;
   height: 100%;
-}
-
-#view-container {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100%;
-  width: 100%;
 }
