--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="description" content="A free and easy-to-use url shortener that tracks click-data">
+  <meta name="keywords" content="URL, shortener, tracker, traffic, data, goo.gl, bit.ly">
+  <meta name="author" content="Kyle Luce">
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
