--- a/app/templates/url_tracker/create.html
+++ b/app/templates/url_tracker/create.html
@@ -44,8 +44,8 @@
   <div id="title-footer">
     <span>
       <a href="/">utldr.co</a> <span class="make_it_blue">|</span>
-      <a href="https://github.com/nomadmtb/utldr" target="_blank">Github</a> <span class="make_it_blue">|</span>
-      <a href="https://www.twitter.com/nomadmtb" target="_blank">Twitter</a>
+      <a href="https://github.com/nomadmtb/utldr" target="_blank">github</a> <span class="make_it_blue">|</span>
+      <a href="https://www.twitter.com/nomadmtb" target="_blank">twitter</a>
     </span>
   </div>
 
