--- a/app/templates/url_tracker/create.html
+++ b/app/templates/url_tracker/create.html
@@ -4,13 +4,15 @@
 
 {% block content %}
 
-<div class="flexbox-container">
-
+<div id="head-wrap">
   <div id="title-head">
     <h1><a href="/">utldr.co</a> <span class="make_it_blue">|</span>
       <small class="text-muted">tldr 4 urls</small>
     </h1>
   </div>
+</div>
+
+<div class="flexbox-container">
 
   <div class="container" id="create-container">
 
