--- a/app/templates/url_tracker/view.html
+++ b/app/templates/url_tracker/view.html
@@ -4,10 +4,12 @@
 
 {% block content %}
 
-<div id="title-head">
-  <h1><a href="/">utldr.co</a> <span class="make_it_blue">|</span>
-    <small class="text-muted">tldr 4 urls</small>
-  </h1>
+<div id="head-wrap">
+  <div id="title-head">
+    <h1><a href="/">utldr.co</a> <span class="make_it_blue">|</span>
+      <small class="text-muted">tldr 4 urls</small>
+    </h1>
+  </div>
 </div>
 
 <div class="container" id="view-container">
