Adding 404 info + page titles
Adding 404 info + page titles

--- a/app/templates/url_tracker/view.html
+++ b/app/templates/url_tracker/view.html
@@ -1,6 +1,6 @@
 {% extends "_base.html" %}
 
-{% set page_title = 'Url tracker | view' %}
+{% set page_title = 'utldr.co | view url details' %}
 
 {% block content %}
 
