--- a/app/templates/url_tracker/create.html
+++ b/app/templates/url_tracker/create.html
@@ -1,6 +1,6 @@
 {% extends "_base.html" %}
 
-{% set page_title = 'Url tracker | welcome' %}
+{% set page_title = 'utldr.co | Shorten a link' %}
 
 {% block content %}
 
