--- a/app/templates/_base.html
+++ b/app/templates/_base.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="description" content="A free and easy-to-use url shortener that tracks click-data">
-  <meta name="keywords" content="URL, shortener, tracker, traffic, data, goo.gl, bit.ly">
+  <meta name="description" content="uTLDR is a url shortener that collects and reports click-through data. It's 100% free and easy to use. Just paste your url in the form below to get started.">
+  <meta name="keywords" content="URL, shortener, tracker, traffic, data, goo.gl, bit.ly, too long didn't read, ">
   <meta name="author" content="Kyle Luce">
 
   <meta charset="utf-8">
