Adding server error page…

--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,8 +1,8 @@
 {% extends "_base.html" %}
 
-{% set page_title = 'Page Not Found' %}
+{% set page_title = 'Internal Server Error' %}
 
 {% block content %}
-<h1>Page Not Found</h1>
+<h1>Server Error</h1>
 <p>sorry<p>
 {% endblock %}
