Moving to abort() for 400 and 500 exceptions
Moving to abort() for 400 and 500 exceptions

--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -3,6 +3,8 @@
 {% set page_title = 'Internal Server Error' %}
 
 {% block content %}
-<h1>Server Error</h1>
-<p>sorry<p>
+<div id="error_items">
+  <h1>Server Error</h1>
+  <p>sorry, <a href="/">go back home</a></p>
+</div>
 {% endblock %}
