--- a/app/static/css/base.less
+++ b/app/static/css/base.less
@@ -134,3 +134,16 @@ body {
   width: 100%;
   height: 100%;
 }
+
+#error_items {
+  h1 {
+    text-align: center;
+  }
+  p {
+    text-align: center;
+  }
+  a {
+    text-decoration: None;
+    color: @bootstrap_blue;
+  }
+}
