--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -3,6 +3,8 @@
 {% set page_title = 'Page Not Found' %}
 
 {% block content %}
-<h1>Page Not Found</h1>
-<p>sorry<p>
+<div id="error_items">
+  <h1>Page Not Found</h1>
+  <p>sorry, <a href="/">go back home</a></p>
+</div>
 {% endblock %}
