Lots of changes
datetime filters

adding create_date to view

fine tuning the chart to not show extra days

favicon.ico & Gruntfile

--- a/app/templates/url_tracker/view.html
+++ b/app/templates/url_tracker/view.html
@@ -14,7 +14,7 @@
 
 <div class="container" id="view-container">
 
-  <h4>Shortened URL | <small class="text-muted">{{ target.manage_key }}</small></h4>
+  <h4>Shortened URL | <small class="text-muted">{{ target.date_created|datetime('%x %X UTC') }}</small></h4>
   <br>
 
   <table class="table table-sm">
