Adding Facebook share button
Adding Facebook share button

--- a/app/static/css/base.less
+++ b/app/static/css/base.less
@@ -19,6 +19,7 @@ body {
   top: 0;
   left: 0;
   right: 0;
+  z-index: 1000;
 }
 
 #title-head {
@@ -146,4 +147,12 @@ body {
     text-decoration: None;
     color: @bootstrap_blue;
   }
+}
+
+.fb-share-button {
+  z-index: 1;
+}
+
+.clear {
+    clear: both;
 }
