--- a/app/templates/url_tracker/view.html
+++ b/app/templates/url_tracker/view.html
@@ -1,8 +1,16 @@
 {% extends "_base.html" %}
 
+{% block optional_includes %}
+{% with CURRENT_HOSTNAME=HOSTNAME, current_target=target %}
+{% include "_facebook_head.html" %}
+{% endwith %}
+{% endblock %}
+
 {% set page_title = 'utldr.co | view url details' %}
 
 {% block content %}
+
+{% include "_facebook_script.html" %}
 
 <div id="head-wrap">
   <div id="title-head">
@@ -36,7 +44,18 @@
 
       <tr>
         <td>This is where the link goes</td>
-        <td><a href="{{ target.destination }}" target="_blank">Open destination</a></td>
+        <td><a href="{{ target.destination }}" target="_blank">Open Link</a></td>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td>
+          <div class="fb-share-button" data-href="{{ 'http://utldr.co' + '/u/' + target.manage_key }}"
+            data-layout="button_count" data-size="small" data-mobile-iframe="true">
+            <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a>
+          </div>
+          <div class="clear"></div>
+        </td>
       </tr>
 
     </tbody>
