--- a/app/templates/url_tracker/view.html
+++ b/app/templates/url_tracker/view.html
@@ -50,11 +50,10 @@
       <tr>
         <td></td>
         <td>
-          <div class="fb-share-button" data-href="{{ 'http://utldr.co' + '/u/' + target.manage_key }}"
+          <div class="fb-share-button" data-href="{{ HOSTNAME + '/u/' + target.manage_key }}"
             data-layout="button_count" data-size="small" data-mobile-iframe="true">
             <a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a>
           </div>
-          <div class="clear"></div>
         </td>
       </tr>
 
