--- a/app/templates/_facebook_head.html
+++ b/app/templates/_facebook_head.html
@@ -1,6 +1,6 @@
 <!-- START Facebook includes for share -->
-<meta property="og:url" content="{{ CURRENT_HOSTNAME }}/u/{{ current_target.manage_key }}" />
+<meta property="og:url" content="{{ LINK }}" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Tracking details for {{ current_target.manage_key }}" />
+<meta property="og:title" content="{{ TITLE }}" />
 <meta property="og:description" content="utldr.co is a url shortener that collects and reports click-through data. It's 100% free and easy to use. Just paste your url in the form below to get started." />
 <!-- END Facebook includes for share -->
