Polishing up stats for first chart
Polishing up stats for first chart

--- a/app/static/css/base.less
+++ b/app/static/css/base.less
@@ -130,6 +130,10 @@ body {
   visibility: hidden;
 }
 
+#click_summary_chart {
+  height: 550px;
+}
+
 #click_chart {
   margin-top: 20px;
   width: 100%;
