--- a/app/templates/url_tracker/create.html
+++ b/app/templates/url_tracker/create.html
@@ -47,7 +47,8 @@
     <span>
       <a href="/">utldr.co</a> <span class="make_it_blue">|</span>
       <a href="https://github.com/nomadmtb/utldr" target="_blank">github</a> <span class="make_it_blue">|</span>
-      <a href="https://www.twitter.com/_kgeo" target="_blank">twitter</a>
+      <a href="https://www.twitter.com/_kgeo" target="_blank">twitter</a> <span class="make_it_blue">|</span>
+      <a href="/stats">site stats</a>
     </span>
   </div>
 
